tests/ui/fail_tcp_with_datagram_pipeline.stderr
error[E0277]: the trait bound `DatagramPipelineBuilder<rs_netty::pipeline::state::Ready, Utf8DatagramCodec, Identity, Identity, Echo, Identity, String, String, String>: IntoStreamPipeline` is not satisfied
  --> tests/ui/fail_tcp_with_datagram_pipeline.rs:18:10
   |
18 |         .pipeline(|| datagram_pipeline().codec(Utf8DatagramCodec).handler(Echo));
   |          ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `IntoStreamPipeline` is not implemented for `DatagramPipelineBuilder<rs_netty::pipeline::state::Ready, Utf8DatagramCodec, Identity, Identity, Echo, Identity, String, String, String>`
help: the trait `IntoStreamPipeline` is implemented for `PipelineBuilder<rs_netty::pipeline::state::Ready, C, InP, BizP, H, OutP, CurrentIn, Write, CurrentOut>`
  --> src/pipeline/stream/builder.rs
   |
   | / impl<C, InP, BizP, H, OutP, CurrentIn, Write, CurrentOut> IntoStreamPipeline
   | |     for PipelineBuilder<Ready, C, InP, BizP, H, OutP, CurrentIn, Write, CurrentOut>
   | | where
   | |     C: Decoder + Encoder<CurrentOut>,
...  |
   | |     Write: Send + 'static,
   | |     CurrentOut: Send + 'static,
   | |_______________________________^
note: required by a bound in `TcpServer::<rs_netty::transport::tcp::server::NoPipeline, L>::pipeline`
  --> src/transport/tcp/server.rs
   |
   |     pub fn pipeline<F, B, P>(self, factory: F) -> TcpServer<F, L>
   |            -------- required by a bound in this associated function
...
   |         B: IntoStreamPipeline<Pipeline = P>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TcpServer::<NoPipeline, L>::pipeline`
